--- a/Bookshelf/AppShell.xaml
+++ b/Bookshelf/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Bookshelf.Views"
-    BackgroundColor="#5D4037"
+    BackgroundColor="#1B2D3E"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellItem FlyoutItemIsVisible="False" Route="SignIn">
