--- a/Bookshelf/Components/BorderedNumericEntry.xaml
+++ b/Bookshelf/Components/BorderedNumericEntry.xaml
@@ -7,7 +7,7 @@
     x:Name="this"
     Margin="0,5,0,0">
     <Label Style="{StaticResource LblHEntry}" Text="{Binding Source={x:Reference this}, Path=LabelText}" />
-    <Border Style="{StaticResource EntryBorders}">
+    <Border HorizontalOptions="StartAndExpand" Style="{StaticResource EntryBorders}">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="5" />
         </Border.StrokeShape>
@@ -16,8 +16,7 @@
             Keyboard="Numeric"
             MaxLength="{Binding Source={x:Reference this}, Path=MaxLength}"
             Style="{StaticResource Entry}"
-            Text="{Binding Source={x:Reference this}, Path=Text}"
-            WidthRequest="80">
+            Text="{Binding Source={x:Reference this}, Path=Text}">
             <Entry.Behaviors>
                 <behaviors:NumericValidationBehavior />
             </Entry.Behaviors>
