--- a/Bookshelf/Views/Book/BookDetail.xaml
+++ b/Bookshelf/Views/Book/BookDetail.xaml
@@ -12,7 +12,7 @@
     <ContentPage.Resources>
         <!--  carditens  -->
         <Style x:Key="LblHeader" TargetType="Label">
-            <Setter Property="TextColor" Value="White" />
+            <Setter Property="TextColor" Value="#98BDD3" />
             <Setter Property="FontAttributes" Value="Bold" />
             <Setter Property="FontFamily" Value="EBGaramondRegular" />
             <Setter Property="Margin" Value="0,0,5,0" />
@@ -50,7 +50,7 @@
                     ZIndex="2">
                     <toolkit:Expander.Header>
                         <Button
-                            BackgroundColor="{StaticResource SecondaryInfoColor}"
+                            BackgroundColor="{StaticResource PrimaryColor}"
                             ContentLayout="Top,0"
                             CornerRadius="20"
                             HeightRequest="40"
@@ -63,14 +63,14 @@
                                     FontFamily="FontAwesome"
                                     Glyph="{x:Static Icons:IconFont.EllipsisV}"
                                     Size="20"
-                                    Color="White" />
+                                    Color="Black" />
                             </Button.ImageSource>
                         </Button>
                     </toolkit:Expander.Header>
                     <toolkit:Expander.Content>
                         <VerticalStackLayout Margin="0,10,0,0" Spacing="10">
                             <Button
-                                BackgroundColor="{StaticResource MainItemColor}"
+                                BackgroundColor="{StaticResource PrimaryColor}"
                                 Command="{Binding CallTimelineCommand}"
                                 Style="{StaticResource ExpanderButton}">
                                 <Button.ImageSource>
@@ -78,11 +78,11 @@
                                         FontFamily="FontAwesome"
                                         Glyph="{x:Static Icons:IconFont.History}"
                                         Size="15"
-                                        Color="#EDEDED" />
+                                        Color="Black" />
                                 </Button.ImageSource>
                             </Button>
                             <Button
-                                BackgroundColor="{StaticResource MainItemColor}"
+                                BackgroundColor="{StaticResource PrimaryColor}"
                                 Command="{Binding NavToUpdateBookCommand}"
                                 Style="{StaticResource ExpanderButton}">
                                 <Button.ImageSource>
@@ -90,11 +90,11 @@
                                         FontFamily="FontAwesome"
                                         Glyph="{x:Static Icons:IconFont.Pen}"
                                         Size="15"
-                                        Color="#EDEDED" />
+                                        Color="Black" />
                                 </Button.ImageSource>
                             </Button>
                             <Button
-                                BackgroundColor="{StaticResource MainItemColor}"
+                                BackgroundColor="{StaticResource PrimaryColor}"
                                 Command="{Binding InactivateBookCommand}"
                                 Style="{StaticResource ExpanderButton}">
                                 <Button.ImageSource>
@@ -102,7 +102,7 @@
                                         FontFamily="FontAwesome"
                                         Glyph="{x:Static Icons:IconFont.Trash}"
                                         Size="15"
-                                        Color="#EDEDED" />
+                                        Color="Black" />
                                 </Button.ImageSource>
                             </Button>
 
@@ -122,11 +122,10 @@
                     <Label
                         Padding="0,0,0,0"
                         FontFamily="EBGaramondSemiBold"
-                        FontSize="20"
+                        FontSize="22"
                         HorizontalOptions="CenterAndExpand"
                         Style="{StaticResource LblHeader}"
-                        Text="{Binding Title}"
-                        TextDecorations="Underline" />
+                        Text="{Binding Title}" />
 
                     <Label
                         Padding="0,0,0,5"
@@ -135,23 +134,35 @@
                         HorizontalOptions="CenterAndExpand"
                         Text="{Binding SubtitleAndVol}"
                         TextColor="White" />
-
+                    <BoxView
+                        Margin="0,10,0,10"
+                        BackgroundColor="White"
+                        HeightRequest="1"
+                        HorizontalOptions="FillAndExpand"
+                        Color="White" />
                     <Label
                         HorizontalOptions="Start"
                         HorizontalTextAlignment="Start"
                         Style="{StaticResource LblEntry}"
                         Text="Autores:"
                         VerticalTextAlignment="Start" />
-
-                    <Label
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        HorizontalOptions="Start"
-                        HorizontalTextAlignment="Start"
-                        Style="{StaticResource LblText}"
-                        Text="{Binding Authors}"
-                        VerticalTextAlignment="Start" />
-
+                    <Border
+                        Padding="8"
+                        Background="#101923"
+                        HorizontalOptions="FillAndExpand"
+                        Stroke="#2B659B">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="5" />
+                        </Border.StrokeShape>
+                        <Label
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            HorizontalOptions="Start"
+                            HorizontalTextAlignment="Start"
+                            Style="{StaticResource LblText}"
+                            Text="{Binding Authors}"
+                            VerticalTextAlignment="Start" />
+                    </Border>
                     <Grid HorizontalOptions="FillAndExpand">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -170,15 +181,23 @@
                             Style="{StaticResource LblEntry}"
                             Text="Páginas:"
                             VerticalTextAlignment="Start" />
-
-                        <Label
+                        <Border
                             Grid.Row="1"
                             Grid.Column="0"
-                            HorizontalTextAlignment="Start"
-                            Style="{StaticResource LblText}"
-                            Text="{Binding Pages}"
-                            VerticalTextAlignment="Start" />
-
+                            Margin="0,0,10,0"
+                            Padding="8"
+                            Background="#101923"
+                            HorizontalOptions="FillAndExpand"
+                            Stroke="#2B659B">
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="5" />
+                            </Border.StrokeShape>
+                            <Label
+                                HorizontalTextAlignment="Start"
+                                Style="{StaticResource LblText}"
+                                Text="{Binding Pages}"
+                                VerticalTextAlignment="Start" />
+                        </Border>
                         <!--    -->
                         <Label
                             Grid.Row="0"
@@ -187,14 +206,22 @@
                             Style="{StaticResource LblEntry}"
                             Text="Categoria:"
                             VerticalTextAlignment="Start" />
-
-                        <Label
+                        <Border
                             Grid.Row="1"
                             Grid.Column="1"
-                            HorizontalTextAlignment="Start"
-                            Style="{StaticResource LblText}"
-                            Text="{Binding Genre}"
-                            VerticalTextAlignment="Start" />
+                            Padding="8"
+                            Background="#101923"
+                            HorizontalOptions="FillAndExpand"
+                            Stroke="#2B659B">
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="5" />
+                            </Border.StrokeShape>
+                            <Label
+                                HorizontalTextAlignment="Start"
+                                Style="{StaticResource LblText}"
+                                Text="{Binding Genre}"
+                                VerticalTextAlignment="Start" />
+                        </Border>
                     </Grid>
 
                     <BoxView
@@ -217,8 +244,9 @@
                     <!--    -->
                     <Border
                         Margin="0,5,0,5"
+                        BackgroundColor="#101923"
                         HorizontalOptions="CenterAndExpand"
-                        Stroke="White">
+                        Stroke="#92CBFF">
                         <Border.StrokeShape>
                             <RoundRectangle CornerRadius="5" />
                         </Border.StrokeShape>
@@ -331,7 +359,7 @@
                                 FontFamily="FontAwesome"
                                 Glyph="{x:Static Icons:IconFont.Edit}"
                                 Size="15"
-                                Color="#EDEDED" />
+                                Color="#000" />
                         </Button.ImageSource>
                     </Button>
                 </StackLayout>
