--- a/Bookshelf/Views/Book/BookHistoric.xaml
+++ b/Bookshelf/Views/Book/BookHistoric.xaml
@@ -43,7 +43,7 @@
                                         <Button
                                             Grid.Row="1"
                                             Margin="10,0,0,0"
-                                            BackgroundColor="{StaticResource Gray300}"
+                                            BackgroundColor="#92CBFF"
                                             ContentLayout="Top,0"
                                             CornerRadius="20"
                                             HeightRequest="40"
@@ -69,9 +69,9 @@
                                             Grid.Column="1"
                                             Margin="0,10,0,0"
                                             Padding="20,10"
-                                            BackgroundColor="WhiteSmoke"
+                                            BackgroundColor="#101923"
                                             HorizontalOptions="FillAndExpand"
-                                            Stroke="Gray"
+                                            Stroke="#51555B"
                                             StrokeShape="RoundRectangle 20,20,0,20"
                                             VerticalOptions="Start">
                                             <Label
@@ -79,7 +79,7 @@
                                                 FontSize="18"
                                                 HorizontalOptions="Start"
                                                 Text="{Binding BookHistoricText}"
-                                                TextColor="Black"
+                                                TextColor="White"
                                                 TextType="Html" />
                                         </Border>
                                     </Grid>
