style: empregando componentização e padronização de estilo

--- a/Bookshelf/Components/BorderedEntry.xaml
+++ b/Bookshelf/Components/BorderedEntry.xaml
@@ -6,7 +6,7 @@
     x:Name="this"
     Margin="0,5,0,0">
     <Label Style="{StaticResource LblHEntry}" Text="{Binding Source={x:Reference this}, Path=LabelText}" />
-    <Border Style="{StaticResource EntryBorders}">
+    <Border IsEnabled="{Binding Source={x:Reference this}, Path=Enabled}" Style="{StaticResource EntryBorders}">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="5" />
         </Border.StrokeShape>
