--- a/Bookshelf/Components/BorderedEditor.xaml
+++ b/Bookshelf/Components/BorderedEditor.xaml
@@ -1,19 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ResourceDictionary
+<VerticalStackLayout
     x:Class="Bookshelf.Components.BorderedEditor"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    <!--<Label
-          IsVisible="{Binding EdtCommentIsVisible}"
-          Style="{StaticResource LblHEntry}"
-          Text="*Comentários" />
-    <Editor
-          HeightRequest="70"
-          HorizontalOptions="FillAndExpand"
-          IsVisible="{Binding EdtCommentIsVisible}"
-          Keyboard="Chat"
-          MaxLength="200"
-          MinimumWidthRequest="250"
-          Style="{StaticResource Entry}"
-          Text="{Binding Comment}" />-->
-</ResourceDictionary>
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Name="this"
+    x:DataType="{Binding Source={x:Reference this}}"
+    IsVisible="{Binding Source={x:Reference this}, Path=EditorIsVisible}">
+    <Label Style="{StaticResource LblHEntry}" Text="{Binding Source={x:Reference this}, Path=LabelText}" />
+    <Border
+        Padding="8"
+        Background="#101923"
+        HorizontalOptions="FillAndExpand"
+        Stroke="#2B659B">
+        <Border.StrokeShape>
+            <RoundRectangle CornerRadius="5" />
+        </Border.StrokeShape>
+        <Editor
+            HeightRequest="70"
+            HorizontalOptions="FillAndExpand"
+            Keyboard="Chat"
+            MaxLength="200"
+            MinimumWidthRequest="250"
+            Style="{StaticResource Entry}"
+            Text="{Binding Source={x:Reference this}, Path=Text}" />
+    </Border>
+</VerticalStackLayout>
