--- a/Bookshelf/Resources/Styles/Styles.xaml
+++ b/Bookshelf/Resources/Styles/Styles.xaml
@@ -30,26 +30,12 @@
 
     <Style x:Key="Entry" TargetType="Entry">
         <Setter Property="TextColor" Value="{StaticResource White}" />
-        <Setter Property="BackgroundColor" Value="#101923" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
         <Setter Property="FontFamily" Value="EBGaramondSemibold" />
         <Setter Property="FontSize" Value="14" />
         <Setter Property="PlaceholderColor" Value="{StaticResource Gray200}" />
         <Setter Property="MinimumHeightRequest" Value="44" />
-        <!--<Setter Property="MinimumWidthRequest" Value="250"/>-->
         <Setter Property="Margin" Value="0,0,0,0" />
-        <Setter Property="VisualStateManager.VisualStateGroups">
-            <VisualStateGroupList>
-                <VisualStateGroup x:Name="CommonStates">
-                    <VisualState x:Name="Normal" />
-                    <VisualState x:Name="Disabled">
-                        <VisualState.Setters>
-                            <Setter Property="TextColor" Value="{StaticResource Black}" />
-                            <Setter Property="BackgroundColor" Value="{StaticResource Gray100}" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateGroupList>
-        </Setter>
     </Style>
 
     <Style x:Key="LblEntry" TargetType="Label">
@@ -78,39 +64,6 @@
             </VisualStateGroupList>
         </Setter>
     </Style>
-
-    <!--<Style x:Key="BtnSuccess" TargetType="Button">
-        <Setter Property="TextColor" Value="{StaticResource White}" />
-        <Setter Property="BackgroundColor" Value="{StaticResource Success}" />
-        <Setter Property="FontFamily" Value="OpenSansSemibold" />
-        <Setter Property="FontSize" Value="20" />
-        <Setter Property="CornerRadius" Value="8" />
-        <Setter Property="MinimumHeightRequest" Value="44" />
-        <Setter Property="MinimumWidthRequest" Value="44" />
-        <Setter Property="VisualStateManager.VisualStateGroups">
-            <VisualStateGroupList>
-                <VisualStateGroup x:Name="CommonStates">
-                    <VisualState x:Name="Normal" />
-                    <VisualState x:Name="Disabled">
-                        <VisualState.Setters>
-                            <Setter Property="TextColor" Value="{StaticResource Gray950}" />
-                            <Setter Property="BackgroundColor" Value="{StaticResource Gray200}" />
-                        </VisualState.Setters>
-                    </VisualState>
-                </VisualStateGroup>
-            </VisualStateGroupList>
-        </Setter>
-    </Style>-->
-
-    <!--<Style x:Key="MainBtn" TargetType="Button">
-        <Setter Property="VerticalOptions" Value="Fill" />
-        <Setter Property="HorizontalOptions" Value="Fill" />
-        <Setter Property="BackgroundColor" Value="#362624" />
-        <Setter Property="TextColor" Value="{StaticResource White}" />
-        <Setter Property="CornerRadius" Value="5" />
-        <Setter Property="FontFamily" Value="EBGaramondBold" />
-        <Setter Property="FontSize" Value="20" />
-    </Style>-->
 
     <Style x:Key="BtnPrimary" TargetType="Button">
         <Setter Property="VerticalOptions" Value="Fill" />
@@ -146,9 +99,23 @@
     </Style>
 
     <Style x:Key="EntryBorders" TargetType="Border">
+        <Setter Property="Padding" Value="5,0,0,0" />
         <Setter Property="HorizontalOptions" Value="FillAndExpand" />
         <Setter Property="BackgroundColor" Value="#101923" />
         <Setter Property="Stroke" Value="#92CBFF" />
+        <Setter Property="StrokeThickness" Value="2" />
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup x:Name="CommonStates">
+                    <VisualState x:Name="Normal" />
+                    <VisualState x:Name="Disabled">
+                        <VisualState.Setters>
+                            <Setter Property="Stroke" Value="#2B659B" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
