--- a/Bookshelf/AppShell.xaml
+++ b/Bookshelf/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Bookshelf.Views"
-    BackgroundColor="#1B2D3E"
+    BackgroundColor="{StaticResource MainBackgroundColor}"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellItem FlyoutItemIsVisible="False" Route="SignIn">
@@ -13,6 +13,10 @@
 
     <ShellItem FlyoutItemIsVisible="False" Route="Main">
         <ShellContent ContentTemplate="{DataTemplate local:Main}" />
+    </ShellItem>
+
+    <ShellItem FlyoutItemIsVisible="False" Route="FirstSyncProcess">
+        <ShellContent ContentTemplate="{DataTemplate local:FirstSyncProcess}" />
     </ShellItem>
 
 </Shell>
