--- a/Bookshelf/Components/RatingBar.xaml
+++ b/Bookshelf/Components/RatingBar.xaml
@@ -11,7 +11,7 @@
         Padding="10,0,10,0"
         BackgroundColor="#101923"
         HorizontalOptions="CenterAndExpand"
-        Stroke="#92CBFF">
+        Stroke="{StaticResource ActiveColor}">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="5" />
         </Border.StrokeShape>
