--- a/Bookshelf/Resources/Styles/Colors.xaml
+++ b/Bookshelf/Resources/Styles/Colors.xaml
@@ -7,7 +7,8 @@
     <Color x:Key="InfoColor">#BCECE0</Color>
     <Color x:Key="SecondaryInfoColor">#5EA2AC</Color>-->
     <Color x:Key="PrimaryColor">#4DACFF</Color>
-
+    <Color x:Key="MainBackgroundColor">#1B2D3E</Color>
+    <Color x:Key="ActiveColor">#92CBFF</Color>
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
