fix: retirada do botao de voltar da tela de sinc, retirada da animação nela; fix: atualização da ngt do usermanagement. fix: ajuste de estilo de cores do android

--- a/Bookshelf/Views/FirstSyncProcess.xaml
+++ b/Bookshelf/Views/FirstSyncProcess.xaml
@@ -6,6 +6,7 @@
     xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
     xmlns:vm="clr-namespace:Bookshelf.ViewModels"
     x:DataType="vm:FirstSyncProcessVM"
+    NavigationPage.HasBackButton="False"
     Style="{StaticResource ContentPage}">
     <ContentPage.Resources>
         <Style x:Key="Icon" TargetType="Label">
