--- a/Bookshelf/Views/Book/AddBook.xaml
+++ b/Bookshelf/Views/Book/AddBook.xaml
@@ -21,7 +21,6 @@
                         HeightRequest="120"
                         IsVisible="{Binding ImgCoverIsVisible}"
                         Source="{Binding Cover}" />
-
                     <components:BorderedEntry
                         Enabled="{Binding LblTitleIsEnabled}"
                         LabelText="Título"
@@ -41,7 +40,7 @@
                         </Grid.ColumnDefinitions>
                         <StackLayout
                             Padding="0"
-                            HorizontalOptions="FillAndExpand"
+                            HorizontalOptions="Start"
                             VerticalOptions="Start">
                             <components:BorderedNumericEntry
                                 LabelText="*Volume"
@@ -51,7 +50,7 @@
                         <StackLayout
                             Grid.Column="1"
                             Padding="0"
-                            HorizontalOptions="FillAndExpand"
+                            HorizontalOptions="Start"
                             VerticalOptions="Start">
                             <components:BorderedNumericEntry
                                 LabelText="*Ano"
@@ -70,7 +69,7 @@
                             Grid.Row="2"
                             Grid.Column="0"
                             Padding="0"
-                            HorizontalOptions="FillAndExpand"
+                            HorizontalOptions="Start"
                             VerticalOptions="Start">
                             <components:BorderedNumericEntry
                                 LabelText="*Páginas"
