--- a/Bookshelf/Views/FirstSyncProcess.xaml
+++ b/Bookshelf/Views/FirstSyncProcess.xaml
@@ -23,6 +23,7 @@
             Margin="0,0,0,10"
             HorizontalOptions="Center"
             Text="Sincronizando..."
+            TextColor="White"
             VerticalOptions="Center" />
         <ProgressBar
             Margin="5,0,5,0"
